--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
-﻿plugins {
-    id "java"
-    id "org.springframework.boot" version "3.4.0" apply false
-    id "io.spring.dependency-management" version "1.1.5"
+﻿apply plugin: 'java-library'
+
+repositories {
+    mavenCentral()
 }
 
-allprojects {
-    group = "com.jam"
-    version = "0.0.1-SNAPSHOT"
+dependencies {
+    // implementation project(':packages:jam-core')  // uncomment and adjust if cross-module deps required
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
+}
 
-    repositories {
-        mavenCentral()
-    }
+test {
+    useJUnitPlatform()
 }
